# fastapi-practice

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/core/: config.py  database.py  exceptions.py  security.py
app/data/: refreshtoken.py  sales.py  user.py
app/router/: auth_router.py  sales_router.py  user_router.py
app/schema/: auth_schema.py  sales_schema.py  user_schema.py
app/service/: auth_service.py  sales_service.py  user_service.py
app/static/css/: style.css
app/templates/: base.html  index.html  revenue_all.html  revenue_product.html  revenue_region.html  revenue_year.html  users.html
